--- a/schedule.html
+++ b/schedule.html
@@ -58,5 +58,56 @@
             </nav>
         </div>
     </header>
+
+    <!-- Event Section -->
+    <section class="events-section">
+        <div class="container">
+            <h1 class="main-heading">Flow of Events</h1>
+            <div class="event-box-cont">
+                <div class="event-box">
+                    <h3>Day 1: 9th August 2024, Friday</h3>
+                    <ul class="events-cont">
+                        <li>
+                            <span>8:00 AM</span>
+                            <p>Opening ceremony</p>
+                        </li>
+                        <li>
+                            <span>10:00 AM</span>
+                            <p>Break</p>
+                        </li>
+                        <li>
+                            <span>11:10 AM - 12:20PM</span>
+                            <p>Open Lunch</p>
+                        </li>
+                        <li>
+                            <span>2:05 PM</span>
+                            <p>End</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="event-box">
+                    <h3>Day 2: 10th August 2024, Saturday</h3>
+                    <ul class="events-cont">
+                        <li>
+                            <span>8:00 AM</span>
+                            <p>Start</p>
+                        </li>
+                        <li>
+                            <span>8:30 AM</span>
+                            <p>Judging Round</p>
+                        </li>
+                        <li>
+                            <span>10:00 AM - 12:00 PM</span>
+                            <p>Prize Ceremony</p>
+                        </li>
+                        <li>
+                            <span>12:00 PM</span>
+                            <p>Dispersal</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
