--- a/members.html
+++ b/members.html
@@ -52,23 +52,23 @@
     <section class="oc-members">
         <div class="container">
             <div class="member">
-                <img src="./assets/shlok.png" alt="OC Member Name">
+                <img src="./assets/src/shlok.png" alt="OC Member Name">
                 <h3>Shlok Rajiv</h3>
                 <p>Event Head</p>
                 <a href="mailto:shlok023079@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/arjun.webp" alt="OC Member Name">
+                <img src="./assets/src/arjun.webp" alt="OC Member Name">
                 <h3>Arjun Jagannathan</h3>
                 <p>Head of Technology</p>
             </div>
             <div class="member">
-                <img src="./assets/siddharth.jpeg" alt="OC Member Name">
+                <img src="./assets/src/siddharth.jpeg" alt="OC Member Name">
                 <h3>Siddharth Chopra</h3>
                 <p>Head of Judging</p>
             </div>
             <div class="member">
-                <img src="./assets/maayan.jpeg" alt="OC Member Name">
+                <img src="./assets/src/maayan.jpeg" alt="OC Member Name">
                 <h3>Maayan Hazra</h3>
                 <p>Head of Auditing</p>
             </div>
@@ -78,7 +78,7 @@
                 <p>Head of Website Development</p>
             </div>
             <div class="member">
-                <img src="./assets/keshav.jpeg" alt="OC Member Name">
+                <img src="./assets/src/keshav.jpeg" alt="OC Member Name">
                 <h3>Keshav Pillarisetti</h3>
                 <p>Head of Website Development</p>
             </div>
@@ -88,22 +88,22 @@
                 <p>Head of Social Media</p>
             </div>
             <div class="member">
-                <img src="./assets/akkanksha.jpeg" alt="OC Member Name">
+                <img src="./assets/src/akkanksha.jpeg" alt="OC Member Name">
                 <h3>Akkanksha Tammana</h3>
                 <p>Head of Social Media</p>
             </div>
             <div class="member">
-                <img src="./assets/shreya.jpeg" alt="OC Member Name">
+                <img src="./assets/src/shreya.jpeg" alt="OC Member Name">
                 <h3>Shreya Seshadri</h3>
                 <p>Head of Registrations</p>
             </div>
             <div class="member">
-                <img src="./assets/simon.jpeg" alt="OC Member Name">
+                <img src="./assets/src/simon.jpeg" alt="OC Member Name">
                 <h3>Simon Patel</h3>
                 <p>Head of Registrations</p>
             </div>
             <div class="member">
-                <img src="./assets/rohit.jpeg" alt="OC Member Name">
+                <img src="./assets/src/rohit.jpeg" alt="OC Member Name">
                 <h3>Rohit Aromal</h3>
                 <p>Head of Logistics</p>
             </div>
@@ -113,7 +113,7 @@
                 <p>Head of Logistics</p>
             </div>
             <div class="member">
-                <img src="./assets/vishruth.jpeg" alt="OC Member Name">
+                <img src="./assets/src/vishruth.jpeg" alt="OC Member Name">
                 <h3>Vishruth Jasti</h3>
                 <p>Head of Resources</p>
             </div>
@@ -133,7 +133,7 @@
                 <p>Head of Design</p>
             </div>
             <div class="member">
-                <img src="./assets/ananya.jpeg" alt="OC Member Name">
+                <img src="./assets/src/ananya.jpeg" alt="OC Member Name">
                 <h3>Ananya Vashishth</h3>
                 <p>Head of Communications</p>
             </div>
