--- a/album.html
+++ b/album.html
@@ -58,5 +58,69 @@
             </nav>
         </div>
     </header>
+
+        <!-- Synthacks '23 Album Carousel -->
+    <section class="album-section">
+        <div class="container">
+            <h1 class="main-heading">Synthacks '23 Album</h1>
+            <!-- Slider main container -->
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide" style="background-image: url('./assets/slide1.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('./assets/slide2.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('./assets/slide3.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('./assets/slide4.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('./assets/slide5.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('./assets/slide6.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('./assets/slide7.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('./assets/slide8.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('./assets/slide9.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('/assets/slide10.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('/assets/slide11.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('/assets/slide12.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('/assets/slide13.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('/assets/slide14.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('/assets/slide15.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('/assets/slide16.jpg')">
+                    </div>
+                    <div class="swiper-slide" style="background-image: url('/assets/slide17.jpg')">
+                    </div>
+                </div>
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+        </div>
+    </section>
+    
+    <!-- Footer-->
+    <footer class="container-fluid">
+        <div class="container">
+            <img src="./assets/synthacks_logo-transparent.png" alt="">
+            <h4>Location</h4>
+            <a href="https://maps.app.goo.gl/W2hDSP2TAAW525nR7">Greenwood High School Sarjapur</a>
+            <h4>Contact</h4>
+            <p>Event Head - <a href="mailto:shlok023079@greenwoodhigh.edu.in">shlok023079@greenwoodhigh.edu.in</a></p>
+        </div>
+    </footer>
+
 </body>
 </html>
