--- a/schedule.html
+++ b/schedule.html
@@ -109,5 +109,17 @@
             </div>
         </div>
     </section>
+
+        <!-- Footer-->
+    <footer class="container-fluid">
+        <div class="container">
+            <img src="./assets/synthacks_logo-transparent.png" alt="">
+            <h4>Location</h4>
+            <a href="https://maps.app.goo.gl/W2hDSP2TAAW525nR7">Greenwood High School Sarjapur</a>
+            <h4>Contact</h4>
+            <p>Event Head - <a href="mailto:shlok023079@greenwoodhigh.edu.in">shlok023079@greenwoodhigh.edu.in</a></p>
+        </div>
+    </footer>
+    
 </body>
 </html>
