--- a/members.html
+++ b/members.html
@@ -61,76 +61,91 @@
                 <img src="./assets/src/arjun.webp" alt="OC Member Name">
                 <h3>Arjun Jagannathan</h3>
                 <p>Head of Technology</p>
+                <a href="mailto:arjun023650@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/siddharth.jpeg" alt="OC Member Name">
                 <h3>Siddharth Chopra</h3>
                 <p>Head of Judging</p>
+                <a href="mailto:siddharth021613@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/maayan.jpeg" alt="OC Member Name">
                 <h3>Maayan Hazra</h3>
                 <p>Head of Auditing</p>
+                <a href="mailto:maayan0220709@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/" alt="OC Member Name">
                 <h3>Rishabh Girish</h3>
                 <p>Head of Website Development</p>
+                <a href="mailto:rishabh01930@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/keshav.jpeg" alt="OC Member Name">
                 <h3>Keshav Pillarisetti</h3>
                 <p>Head of Website Development</p>
+                <a href="mailto:keshav051291@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/" alt="OC Member Name">
                 <h3>Samiksha Sahu</h3>
                 <p>Head of Social Media</p>
+                <a href="mailto:samiksha052660@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/akkanksha.jpeg" alt="OC Member Name">
                 <h3>Akkanksha Tammana</h3>
                 <p>Head of Social Media</p>
+                <a href="mailto:akkansha051008@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/shreya.jpeg" alt="OC Member Name">
                 <h3>Shreya Seshadri</h3>
                 <p>Head of Registrations</p>
+                <a href="mailto:shreya04057@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/simon.jpeg" alt="OC Member Name">
                 <h3>Simon Patel</h3>
                 <p>Head of Registrations</p>
+                <a href="mailto:simon052663@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/rohit.jpeg" alt="OC Member Name">
                 <h3>Rohit Aromal</h3>
                 <p>Head of Logistics</p>
+                <a href="mailto:rohit01881@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/" alt="OC Member Name">
                 <h3>Aaron Joseph</h3>
                 <p>Head of Logistics</p>
+                <a href="mailto:aaron024725@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/vishruth.jpeg" alt="OC Member Name">
                 <h3>Vishruth Jasti</h3>
                 <p>Head of Resources</p>
+                <a href="mailto:vishruth051091@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/" alt="OC Member Name">
                 <h3>Shubhan Jain</h3>
                 <p>Head of Resources</p>
+                <a href="mailto:shubhan052662@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/" alt="OC Member Name">
                 <h3>Thanvi Krishnamurthy</h3>
                 <p>Head of Photography</p>
+                <a href="mailto:thanvi051937@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/" alt="OC Member Name">
                 <h3>Palak Gupta</h3>
                 <p>Head of Design</p>
+                <a href="mailto:palak@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/ananya.jpeg" alt="OC Member Name">
