--- a/members.html
+++ b/members.html
@@ -145,12 +145,13 @@
                 <img src="./assets/" alt="OC Member Name">
                 <h3>Palak Gupta</h3>
                 <p>Head of Design</p>
-                <a href="mailto:palak@greenwoodhigh.edu.in">Mail</a>
+                <a href="mailto:palak052657@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/ananya.jpeg" alt="OC Member Name">
                 <h3>Ananya Vashishth</h3>
                 <p>Head of Communications</p>
+                <a href="mailto:ananya023515@greenwoodhigh.edu.in">Mail</a>
             </div>
             <!-- Add more member divs as needed -->
         </div>
