--- a/album.html
+++ b/album.html
@@ -121,6 +121,9 @@
             <p>Event Head - <a href="mailto:shlok023079@greenwoodhigh.edu.in">shlok023079@greenwoodhigh.edu.in</a></p>
         </div>
     </footer>
-
+    
+    <!-- SwiperJS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    
 </body>
 </html>
