--- a/members.html
+++ b/members.html
@@ -160,5 +160,7 @@
     <!-- You may want to add a footer here if your other pages have one -->
 
     <!-- Any additional scripts -->
+    <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
+    <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
 </body>
 </html>
