--- a/schedule.html
+++ b/schedule.html
@@ -120,6 +120,9 @@
             <p>Event Head - <a href="mailto:shlok023079@greenwoodhigh.edu.in">shlok023079@greenwoodhigh.edu.in</a></p>
         </div>
     </footer>
+
+    <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
+    <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
     
 </body>
 </html>
