--- a/album.html
+++ b/album.html
@@ -151,6 +151,9 @@
             },
         });
     </script>
+
+    <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
+    <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
     
 </body>
 </html>
