--- a/members.html
+++ b/members.html
@@ -58,7 +58,7 @@
                 <a href="mailto:shlok023079@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/arjun.png" alt="OC Member Name">
+                <img src="./assets/src/arjun.png" alt="OC Member Name">
                 <h3>Arjun Jagannathan</h3>
                 <p>Head of Technology</p>
                 <a href="mailto:arjun023650@greenwoodhigh.edu.in">Mail</a>
