--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="./assets/styles-register.css">
     <style>
-       table {
+        table {
             width: 30%;
             margin: 0 auto; /* Center the table */
             border-collapse: collapse;
@@ -34,6 +34,22 @@
         }
         .btn-purple:hover {
             background-color: #4a0072;
+        }
+        .rules-section {
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            width: 80%;
+            max-width: 800px;
+        }
+        .rules-section h3 {
+            margin-top: 0;
+        }
+        .rules-section ul {
+            list-style-type: disc;
+            padding-left: 20px;
         }
     </style>
 </head>
@@ -86,13 +102,25 @@
         </table>
 
         <p class="font-md info">Registration Form for Synthacks 2024. Registrations close on 7th August, 2024 at 9:30 p.m., so please ensure you register as soon as possible!</p>
-        
+
+        <div class="rules-section">
+            <h3>Rules for Synthacks 2024</h3>
+            <ul>
+                <li>Participants can create their project using any technology they want including but not limited to: Machine learning, AI, App development, IoT, Robotics etc.</li>
+                <li>If hardware components are being used, the participants must procure the required equipment themselves.</li>
+                <li>Usage of any paid API is not permitted.</li>
+                <li>Participants will not be allowed to use any prewritten code.</li>
+                <li>Plagiarism is not allowed in any case, it will cause the entire team to be disqualified.</li>
+                <li>Participants WILL NOT be allowed to work on their projects before the competition.</li>
+                <li>If a team is found breaking any rule, they will have until the next auditing round to rectify their code. During the auditing round, the auditing team will inspect the team’s code to ensure the rules are being met. If the rules are still not met, the team will not be eligible for judging, and will not receive any prizes.</li>
+            </ul>
+        </div>
+
         <h3 class="font-md">Click the link below to start the registration process:</h3>
         <button class="btn-purple" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform'">Register Now!</button>
     </section>
 
-
-     <!-- Footer-->
+    <!-- Footer-->
     <footer class="container-fluid">
         <div class="container">
             <img src="./assets/synthacks_logo-transparent.png" alt="">
