--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
         .rules-section {
             margin: 20px auto;
             padding: 20px;
-            background-color: #f9f9f9;
+            background-color: #1a1a1a;
             border: 1px solid #ddd;
             border-radius: 5px;
             width: 80%;
