--- a/register.html
+++ b/register.html
@@ -112,7 +112,7 @@
                 <li>Participants will not be allowed to use any prewritten code.</li>
                 <li>Plagiarism is not allowed in any case, it will cause the entire team to be disqualified.</li>
                 <li>Participants WILL NOT be allowed to work on their projects before the competition.</li>
-                <li>If a team is found breaking any rule, they will have until the next auditing round to rectify their code. During the auditing round, the auditing team will inspect the team’s code to ensure the rules are being met. If the rules are still not met, the team will not be eligible for judging, and will not receive any prizes.</li>
+                <h2>If a team is found breaking any rule, they will have until the next auditing round to rectify their code. During the auditing round, the auditing team will inspect the team’s code to ensure the rules are being met. If the rules are still not met, the team will not be eligible for judging, and will not receive any prizes.</h2>
             </ul>
         </div>
 
