--- a/register.html
+++ b/register.html
@@ -1,3 +1,289 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+    --primary-color: #5cb85c;
+    --hover-color: #4cae4c;
+    --text-color: #fff;
+    --bg-color: #1a1a1a;
+    --border-color: #3b3b3b;
+    --highlight-color: #6a1b9a;
+    --rules-bg-color: #2c2c2c; /* Grey color for rules section */
+}
+
+body {
+    font-family: "Raleway", sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+* {
+    font-weight: 500;
+    box-sizing: border-box;
+}
+
+a {
+    color: var(--text-color);
+    text-decoration: none;
+    transition-duration: 0.3s;
+}
+
+a:hover {
+    color: #abdded;
+}
+
+/* Header */
+.navbar {
+    position: sticky;
+    top: 0;
+    background-color: var(--bg-color);
+    padding: 16px 0;
+    z-index: 1000;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+}
+
+.navbar .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    font-weight: 800;
+}
+
+.logo img {
+    margin-right: 16px;
+    border-radius: 6px;
+    width: 56px;
+}
+
+.logo span {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.navbar ul {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.navbar li {
+    position: relative;
+    margin-left: 24px;
+    padding: 12px 0;
+}
+
+.navbar li:first-child {
+    margin-left: 0;
+}
+
+.dropdown-cont {
+    position: absolute;
+    z-index: 500;
+    top: 43px;
+    right: 0;
+    display: none;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: #fff;
+    width: 170px;
+}
+
+.dropdown:hover > .dropdown-cont {
+    display: block;
+}
+
+.dropdown-cont ul {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+}
+
+.dropdown-cont ul li {
+    margin: 0;
+    padding: 8px 16px;
+    width: 100%;
+}
+
+.dropdown-cont ul li:hover {
+    background-color: #dfdfdf;
+}
+
+.dropdown-cont a {
+    color: var(--bg-color);
+}
+
+/* Hero Section */
+.hero-section .container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 580px;
+    height: 80vh;
+    max-height: 600px;
+    color: var(--text-color);
+    border-radius: 12px;
+    overflow: hidden;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    border: 2px solid var(--border-color);
+    background-size: cover;
+    background-position: center;
+    backdrop-filter: blur(10px);
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('your-hero-image-url.jpg'); /* Adjust with your image URL */
+}
+
+/* Registration Section Styles */
+.body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.body h1 {
+    font-size: 26px;
+    margin-bottom: 10px;
+}
+
+.body h2, .body h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.font-md {
+    font-size: 16px;
+}
+
+h1.font-md {
+    font-size: 26px;
+}
+
+/* Purple Button Styles */
+.btn-purple {
+    background-color: var(--highlight-color); 
+    color: var(--text-color);
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+.btn-purple:hover {
+    background-color: #5a00a3;
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(0,0,0,0.3);
+}
+
+/* Rules Section Styles */
+.rules-section {
+    margin: 20px auto;
+    padding: 20px;
+    background-color: var(--rules-bg-color); /* Grey color for rules section */
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
+    width: 80%;
+    max-width: 800px;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+.rules-section h3 {
+    font-size: 22px;
+    margin-top: 0;
+    margin-bottom: 15px;
+}
+
+.rule {
+    margin-bottom: 15px;
+    position: relative;
+}
+
+.rule-title {
+    font-size: 18px;
+    cursor: pointer;
+    padding: 10px;
+    background-color: var(--highlight-color); /* Purple background for title */
+    border-radius: 5px;
+    color: var(--text-color);
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.rule-title:hover {
+    background-color: #5a00a3;
+    transform: scale(1.02);
+}
+
+.rule-description {
+    display: none;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: var(--bg-color);
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    color: var(--text-color);
+    transition: opacity 0.3s ease-in-out, max-height 0.3s ease-in-out;
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+}
+
+.rule:hover .rule-description {
+    display: block;
+    max-height: 200px;
+    opacity: 1;
+}
+
+/* Footer Styles */
+footer {
+    text-align: center;
+    color: var(--text-color);
+    padding: 64px 0;
+    border-top: 2px solid var(--border-color);
+}
+
+footer img {
+    width: 150px;
+}
+
+footer a {
+    color: #abdded;
+    transition-duration: 0.2s;
+}
+
+footer a:hover {
+    color: #50acca;
+}
+
+footer h4,
+footer p {
+    margin: 0;
+}
+
+footer h4 {
+    font-weight: 700;
+    margin: 32px 0 8px 0;
+}
+Updated HTML
+You can keep your existing HTML structure, but here's how it would look with the updated CSS:
+
+html
+Copy code
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,68 +293,6 @@
     <title>Registrations</title>
 
     <link rel="stylesheet" href="./assets/styles-register.css">
-    <style>
-        /* Existing styles */
-
-        /* Rules Section Styles */
-        .rules-section {
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #1a1a1a; /* Grey color for rules section */
-            color: var(--text-color);
-            border: 1px solid #3b3b3b;
-            border-radius: 8px;
-            width: 80%;
-            max-width: 800px;
-            transition: background-color 0.3s, border-color 0.3s; /* Smooth transitions */
-        }
-
-        .rules-section h3 {
-            font-size: 22px;
-            margin-top: 0;
-            margin-bottom: 15px;
-        }
-
-        .rule {
-            margin-bottom: 15px;
-            position: relative;
-        }
-
-        .rule-title {
-            font-size: 18px;
-            cursor: pointer;
-            padding: 10px;
-            background-color: #6a1b9a; /* Purple background for title */
-            border-radius: 5px;
-            color: var(--text-color);
-            transition: background-color 0.3s, transform 0.3s; /* Smooth transitions */
-        }
-
-        .rule-title:hover {
-            background-color: #5a00a3; /* Darker purple on hover */
-            transform: scale(1.02); /* Slightly enlarge on hover */
-        }
-
-        .rule-description {
-            display: none;
-            margin-top: 10px;
-            padding: 10px;
-            background-color: #1a1a1a;
-            border: 1px solid #3b3b3b;
-            border-radius: 5px;
-            color: var(--text-color);
-            transition: opacity 0.3s ease-in-out, max-height 0.3s ease-in-out; /* Smooth transitions */
-            max-height: 0;
-            overflow: hidden;
-            opacity: 0;
-        }
-
-        .rule:hover .rule-description {
-            display: block;
-            max-height: 200px; /* Adjust as needed */
-            opacity: 1;
-        }
-    </style>
 </head>
 
 <body>
@@ -102,7 +326,6 @@
         </div>
     </header>
 
-
     <!-- Main Content -->
     <section class="body">
         <h1 class="font-md">Registrations</h1>
@@ -114,69 +337,4 @@
                 <td>6th - 8th</td>
             </tr>
             <tr>
-                <td>Senior Category</td>
-                <td>9th - 12th</td>
-            </tr>
-        </table>
-
-        <p class="font-md info">Registration Form for Synthacks 2024. Registrations close on 7th August, 2024 at 9:30 p.m., so please ensure you register as soon as possible!</p>
-
-        <h3 class="font-md">Click the link below to start the registration process:</h3>
-        <button class="btn-purple" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform'">Register Now!</button>
-
-        <!-- Rules Section -->
-        <div class="rules-section">
-            <h3>Rules</h3>
-            <div class="rule">
-                <div class="rule-title">Technology Usage</div>
-                <div class="rule-description">
-                    The participants can create their project using any technology they want including but not limited to: Machine learning, AI, App development, IoT, Robotics etc.
-                </div>
-            </div>
-            <div class="rule">
-                <div class="rule-title">Hardware Components</div>
-                <div class="rule-description">
-                    If hardware components are being used, the participants must procure the required equipment themselves.
-                </div>
-            </div>
-            <div class="rule">
-                <div class="rule-title">Paid APIs</div>
-                <div class="rule-description">
-                    Usage of any paid API is not permitted.
-                </div>
-            </div>
-            <div class="rule">
-                <div class="rule-title">Prewritten Code</div>
-                <div class="rule-description">
-                    Participants will not be allowed to use any prewritten code.
-                </div>
-            </div>
-            <div class="rule">
-                <div class="rule-title">Plagiarism</div>
-                <div class="rule-description">
-                    Plagiarism is not allowed in any case; it will cause the entire team to be disqualified.
-                </div>
-            </div>
-            <div class="rule">
-                <div class="rule-title">Project Timing</div>
-                <div class="rule-description">
-                    Participants WILL NOT be allowed to work on their projects before the competition.
-                </div>
-            </div>
-            <div class="rule">
-                <div class="rule-title">Rule Violations</div>
-                <div class="rule-description">
-                    If a team is found breaking any rule, they will have until the next auditing round to rectify their code. During the auditing round, the auditing team will inspect the team’s code to ensure the rules are being met. If the rules are still not met, the team will not be eligible for judging and will not receive any prizes.
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer-->
-    <footer class="container-fluid">
-        <div class="container">
-            <img src="./assets/synthacks_logo-transparent.png" alt="">
-            <h4>Location</h4>
-            <a href="https://maps.app.goo.gl/W2hDSP2TAAW525nR7">Greenwood High School Sarjapur</a>
-            <h4>Contact</h4>
-            <p>Event Head
+                <td>
