--- a/register.html
+++ b/register.html
@@ -51,4 +51,74 @@
                 <td>6th - 8th</td>
             </tr>
             <tr>
-                <td>
+                <td>Senior Category</td>
+                <td>9th - 12th</td>
+            </tr>
+        </table>
+
+        <p class="font-md info">Registration Form for Synthacks 2024. Registrations close on 7th August, 2024 at 9:30 p.m., so please ensure you register as soon as possible!</p>
+
+        <h3 class="font-md">Click the link below to start the registration process:</h3>
+        <button class="btn-purple" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform'">Register Now!</button>
+
+        <!-- Rules Section -->
+        <div class="rules-section">
+            <h3>Rules</h3>
+            <div class="rule">
+                <div class="rule-title">Technology Usage</div>
+                <div class="rule-description">
+                    The participants can create their project using any technology they want including but not limited to: Machine learning, AI, App development, IoT, Robotics etc.
+                </div>
+            </div>
+            <div class="rule">
+                <div class="rule-title">Hardware Components</div>
+                <div class="rule-description">
+                    If hardware components are being used, the participants must procure the required equipment themselves.
+                </div>
+            </div>
+            <div class="rule">
+                <div class="rule-title">Paid APIs</div>
+                <div class="rule-description">
+                    Usage of any paid API is not permitted.
+                </div>
+            </div>
+            <div class="rule">
+                <div class="rule-title">Prewritten Code</div>
+                <div class="rule-description">
+                    Participants will not be allowed to use any prewritten code.
+                </div>
+            </div>
+            <div class="rule">
+                <div class="rule-title">Plagiarism</div>
+                <div class="rule-description">
+                    Plagiarism is not allowed in any case; it will cause the entire team to be disqualified.
+                </div>
+            </div>
+            <div class="rule">
+                <div class="rule-title">Project Timing</div>
+                <div class="rule-description">
+                    Participants WILL NOT be allowed to work on their projects before the competition.
+                </div>
+            </div>
+            <div class="rule">
+                <div class="rule-title">Rule Violations</div>
+                <div class="rule-description">
+                    If a team is found breaking any rule, they will have until the next auditing round to rectify their code. During the auditing round, the auditing team will inspect the team’s code to ensure the rules are being met. If the rules are still not met, the team will not be eligible for judging and will not receive any prizes.
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer-->
+    <footer class="container-fluid">
+        <div class="container">
+            <img src="./assets/synthacks_logo-transparent.png" alt="">
+            <h4>Location</h4>
+            <a href="https://maps.app.goo.gl/W2hDSP2TAAW525nR7">Greenwood High School Sarjapur</a>
+            <h4>Contact</h4>
+            <p>Event Head</p>
+        </div>
+    </footer>
+</body>
+
+</html>
