--- a/rules.html
+++ b/rules.html
@@ -65,7 +65,7 @@
         <h2>Themes for 2024</h2>
         <div class="theme-box">
             <h3>Theme 1: Sustainable Technology</h3>
-            <p></p>
+            <p>Innovate for a greener future by developing solutions that minimize environmental impact and promote resource efficiency.</p>
         </div>
         <div class="theme-box">
             <h3>Theme 2: Healthcare Innovation</h3>
