--- a/rules.html
+++ b/rules.html
@@ -69,23 +69,19 @@
         </div>
         <div class="theme-box">
             <h3>Theme 2: Healthcare Innovation</h3>
-            <p></p>
+            <p>Develop solutions that advance medical research, promote accessibility, and ensure better health outcomes for all.</p>
         </div>
         <div class="theme-box">
             <h3>Theme 3: Fintech</h3>
-            <p></p>
+            <p>Transform the financial landscape with innovative technologies that enhance financial services, improve accessibility, and promote financial literacy.</p>
         </div>
         <div class="theme-box">
             <h3>Theme 4: Learning Innovation</h3>
-            <p></p>
+            <p>Revolutionize education by developing technologies that enhance learning experiences, increase accessibility, and personalize education.</p>
         </div>
         <div class="theme-box">
             <h3>Theme 5: Transit Technology</h3>
-            <p></p>
-        </div>
-        <div class="theme-box">
-            <h3>Theme 6: Cybersecurity</h3>
-            <p></p>
+            <p>Innovate transportation by creating technologies that enhance mobility, improve efficiency, and reduce environmental impact.</p>
         </div>
     </div>
 
