--- a/register.html
+++ b/register.html
@@ -121,6 +121,9 @@
             <p>Event Head</p>
         </div>
     </footer>
-</body>
 
+    <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
+    <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
+    
+</body>
 </html>
