--- a/register.html
+++ b/register.html
@@ -78,19 +78,19 @@
                 </div>
             </div>
             <div class="rule">
-                <div class="rule-title">Paid APIs</div>
+                <div class="rule-title">No Paid APIs</div>
                 <div class="rule-description">
                     Usage of any paid API is not permitted.
                 </div>
             </div>
             <div class="rule">
-                <div class="rule-title">Prewritten Code</div>
+                <div class="rule-title">No Prewritten Code</div>
                 <div class="rule-description">
                     Participants will not be allowed to use any prewritten code.
                 </div>
             </div>
             <div class="rule">
-                <div class="rule-title">Plagiarism</div>
+                <div class="rule-title">No Plagiarism</div>
                 <div class="rule-description">
                     Plagiarism is not allowed in any case; it will cause the entire team to be disqualified.
                 </div>
