--- a/register.html
+++ b/register.html
@@ -68,7 +68,7 @@
             <div class="rule">
                 <div class="rule-title">Technology Usage</div>
                 <div class="rule-description">
-                    The participants can create their project using any technology they want including but not limited to: Machine learning, AI, App development, IoT, Robotics etc.
+                    The participants can create their project using any technology they want including but not limited to: AI, ML, App development, IoT, Robotics etc.
                 </div>
             </div>
             <div class="rule">
