--- a/members.html
+++ b/members.html
@@ -118,7 +118,7 @@
                 <a href="mailto:rohit01881@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/src/aaron.jpeg" alt="OC Member Name">
                 <h3>Aaron Joseph</h3>
                 <p>Head of Logistics</p>
                 <a href="mailto:aaron024725@greenwoodhigh.edu.in">Mail</a>
