--- a/members.html
+++ b/members.html
@@ -76,7 +76,7 @@
                 <a href="mailto:maayan0220709@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/src/rishabhsynt.jpeg" alt="OC Member Name">
+                <img src="./assets/src/rishabh.jpeg" alt="OC Member Name">
                 <h3>Rishabh Girish</h3>
                 <p>Head of Website Development</p>
                 <a href="mailto:rishabh01930@greenwoodhigh.edu.in">Mail</a>
