--- a/members.html
+++ b/members.html
@@ -136,7 +136,7 @@
                 <a href="mailto:shubhan052662@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/src/thanvi.jpeg" alt="OC Member Name">
                 <h3>Thanvi Krishnamurthy</h3>
                 <p>Head of Photography</p>
                 <a href="mailto:thanvi051937@greenwoodhigh.edu.in">Mail</a>
