--- a/members.html
+++ b/members.html
@@ -106,7 +106,7 @@
                 <a href="mailto:shreya04057@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/src/simon.jpeg" alt="OC Member Name">
+                <img src="./assets/src/simon.jpg" alt="OC Member Name">
                 <h3>Simon Patel</h3>
                 <p>Head of Registrations</p>
                 <a href="mailto:simon052663@greenwoodhigh.edu.in">Mail</a>
