--- a/members.html
+++ b/members.html
@@ -130,7 +130,7 @@
                 <a href="mailto:vishruth051091@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/src/shubhan.jpeg" alt="OC Member Name">
                 <h3>Shubhan Jain</h3>
                 <p>Head of Resources</p>
                 <a href="mailto:shubhan052662@greenwoodhigh.edu.in">Mail</a>
