removed regs link

--- a/register.html
+++ b/register.html
@@ -56,7 +56,7 @@
             </tr>
         </table>
 
-        <h2>Registrations are currently closed!</h2>
+        <h1 style="color: red;">Registrations are currently closed!</h1>
         <!-- <p class="font-md info">Registrations close on 7th August, 2024 at 9:30 p.m., so please ensure you register as soon as possible!</p>
 
         <h3 class="font-md">Click the link below to start the registration process:</h3>
