--- a/members.html
+++ b/members.html
@@ -142,7 +142,7 @@
                 <a href="mailto:thanvi051937@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/palak.jpg" alt="OC Member Name">
                 <h3>Palak Gupta</h3>
                 <p>Head of Design</p>
                 <a href="mailto:palak052657@greenwoodhigh.edu.in">Mail</a>
