--- a/members.html
+++ b/members.html
@@ -148,7 +148,7 @@
                 <a href="mailto:palak052657@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/src/ananya.jpeg" alt="OC Member Name">
+                <img src="./assets/src/ananya.jpg" alt="OC Member Name">
                 <h3>Ananya Vashishth</h3>
                 <p>Head of Communications</p>
                 <a href="mailto:ananya023515@greenwoodhigh.edu.in">Mail</a>
