--- a/members.html
+++ b/members.html
@@ -82,7 +82,7 @@
                 <a href="mailto:rishabh01930@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/src/keshavp.jpeg" alt="OC Member Name">
+                <img src="./assets/src/keshav.jpg" alt="OC Member Name">
                 <h3>Keshav Pillarisetti</h3>
                 <p>Head of Website Development</p>
                 <a href="mailto:keshav051291@greenwoodhigh.edu.in">Mail</a>
