--- a/members.html
+++ b/members.html
@@ -88,7 +88,7 @@
                 <a href="mailto:keshav051291@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
-                <img src="./assets/" alt="OC Member Name">
+                <img src="./assets/src/samiksha.jpeg" alt="OC Member Name">
                 <h3>Samiksha Sahu</h3>
                 <p>Head of Social Media</p>
                 <a href="mailto:samiksha052660@greenwoodhigh.edu.in">Mail</a>
