--- a/register.html
+++ b/register.html
@@ -119,7 +119,7 @@
             <h4>Location</h4>
             <a href="https://maps.app.goo.gl/W2hDSP2TAAW525nR7">Greenwood High School Sarjapur</a>
             <h4>Contact</h4>
-            <p>Event Head</p>
+            <p>Event Head - <a href="mailto:shlok023079@greenwoodhigh.edu.in">shlok023079@greenwoodhigh.edu.in</a></p>
         </div>
     </footer>
 
