--- a/members.html
+++ b/members.html
@@ -97,7 +97,7 @@
                 <img src="./assets/src/akkanksha.jpeg" alt="OC Member Name">
                 <h3>Akkanksha Tammana</h3>
                 <p>Head of Social Media</p>
-                <a href="mailto:akkansha051008@greenwoodhigh.edu.in">Mail</a>
+                <a href="mailto:akkanksha051008@greenwoodhigh.edu.in">Mail</a>
             </div>
             <div class="member">
                 <img src="./assets/src/shreya.jpeg" alt="OC Member Name">
