--- a/rules.html
+++ b/rules.html
@@ -59,9 +59,10 @@
             <p>Synthacks is the annual intraschool hackathon hosted by Greenwood High, serving as a platform for students to showcase their coding skills and innovative thinking. Each year, participants are challenged with unique themes that inspire creativity and problem-solving. During the hackathon, students work tirelessly to develop both software and hardware solutions, leveraging their technical knowledge and teamwork. Synthacks not only highlights the talent and ingenuity of our students but also fosters a collaborative environment where learning and innovation thrive. It has become a cornerstone event for our school's tech community, embodying the spirit of innovation and excellence that Greenwood High stands for.</p>
         </div>
     </section>
-    
+
+    <h2 style="color: orange;">Themes will be released soon!</h2>
     <!-- Themes Section -->
-    <div class="themes-content">
+<!--     <div class="themes-content">
         <h2>Themes for 2024</h2>
         <div class="theme-box">
             <h3>Theme 1: Sustainable Technology</h3>
@@ -83,7 +84,7 @@
             <h3>Theme 5: Transit Technology</h3>
             <p>Innovate transportation by creating technologies that enhance mobility, improve efficiency, and reduce environmental impact.</p>
         </div>
-    </div>
+    </div> -->
 
     <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
     <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
