--- a/rules.html
+++ b/rules.html
@@ -60,7 +60,8 @@
         </div>
     </section>
 
-    <h2 style="color: orange;">Themes will be released soon!</h2>
+    <h2 style="color: orange; text-align: center; padding: 12px 0;">Themes will be released soon!</h2>
+
     <!-- Themes Section -->
 <!--     <div class="themes-content">
         <h2>Themes for 2024</h2>
