--- a/rules.html
+++ b/rules.html
@@ -60,7 +60,7 @@
         </div>
     </section>
 
-    <h2 style="color: orange; text-align: center; padding: 12px 0;">Themes will be released soon!</h2>
+    <h2 style="color: orange; text-align: center; padding: 12px 0;">Themes will be released on the day of the event. Check back later!</h2>
 
     <!-- Themes Section -->
 <!--     <div class="themes-content">
