--- a/members.html
+++ b/members.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OC Members</title>
+    <title>Synthacks 2024 | OC Members</title>
     <!-- SwiperJS CSS CDN (Content Delivery Network) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Custom CSS -->
