--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrations</title>
+    <title>Synthacks 2024 | Registrations</title>
 
     <link rel="stylesheet" href="./assets/styles-register.css">
 </head>
