--- a/album.html
+++ b/album.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GWH SYNTHACKS 2024</title>
+    <title>Synthacks 2024 | Album</title>
 
     <!-- SwiperJS CSS CDN (Content Delivery Network) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
