--- a/index.html
+++ b/index.html
@@ -96,20 +96,28 @@
                     <h3>Day 1: 9th August 2024, Friday</h3>
                     <ul class="events-cont">
                         <li>
-                            <span>8:00 AM</span>
+                            <span>8:00AM - 9:00AM</span>
                             <p>Opening ceremony</p>
                         </li>
                         <li>
-                            <span>10:00 AM</span>
-                            <p>Break</p>
+                            <span>9:50AM - 10:15 AM</span>
+                            <p>Short Break (Optional)</p>
                         </li>
                         <li>
-                            <span>11:10 AM - 12:20PM</span>
+                            <span>10:15AM - 11:10 AM</span>
+                            <p>First Auditing Round</p>
+                        </li>
+                        <li>
+                            <span>11:10AM - 12:20PM</span>
                             <p>Open Lunch</p>
                         </li>
                         <li>
-                            <span>2:05 PM</span>
-                            <p>End</p>
+                            <span>1:00PM - 1:55PM</span>
+                            <p>Second Auditing Round</p>
+                        </li>
+                        <li>
+                            <span>2:00PM</span>
+                            <p>End of Day 1</p>
                         </li>
                     </ul>
                 </div>
