--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <p>Opening ceremony</p>
                         </li>
                         <li>
-                            <span>9:50AM - 10:15 AM</span>
+                            <span>9:50AM - 10:00 AM</span>
                             <p>Short Break (Optional)</p>
                         </li>
                         <li>
@@ -126,19 +126,23 @@
                     <ul class="events-cont">
                         <li>
                             <span>8:00 AM</span>
-                            <p>Start</p>
+                            <p>Start of Day 2</p>
                         </li>
                         <li>
-                            <span>8:30 AM</span>
+                            <span>8:15AM - 8:45AM</span>
+                            <p>Third Auditing Round</p>
+                        </li>
+                        <li>
+                            <span>9:00 AM - 10:55 PM</span>
                             <p>Judging Round</p>
                         </li>
                         <li>
-                            <span>10:00 AM - 12:00 PM</span>
-                            <p>Prize Ceremony</p>
+                            <span>11:00AM - 11:50AM</span>
+                            <p>Prize Distribution</p>
                         </li>
                         <li>
-                            <span>12:00 PM</span>
-                            <p>Dispersal</p>
+                            <span>12:00PM</span>
+                            <p>End of Day 2</p>
                         </li>
                     </ul>
                 </div>
