--- a/register.html
+++ b/register.html
@@ -56,10 +56,15 @@
             </tr>
         </table>
 
-        <h2 style="color: orange;">Check your email on how to register for the event!</h2>
-        <!-- <p class="font-md info">Registrations close on 7th August, 2024 at 9:30 p.m., so please ensure you register as soon as possible!</p>
+        <!-- <h2 style="color: orange;">Check your email on how to register for the event!</h2> -->
+        <p class="font-md info">Registrations close on 7th August, 2024 at 9:30 p.m., so please ensure you register as soon as possible!</p>
 
-        <h3 class="font-md">Click the link below to start the registration process:</h3>
+        <h2 style="color: orange;">Junior Category Registration link (Grades 6 - 8)</h2>
+        <button class="btn-purple" onclick="window.location.href='https://paytm.me/ILSO-fa'">Register →</button>
+        <h2 style="color: red;">Senior Category Registration link (Grades 9 - 12):</h2>
+        <button class="btn-purple" onclick="window.location.href='https://paytm.me/teP-igv'">Register →</button>
+
+        <!-- <h3 class="font-md">Click the link below to start the registration process:</h3>
         <button class="btn-purple" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScHq3qfrm86HIcKmuWbU_1-YxDDS8D9mvYYKJmU_ldiM7Rk3g/viewform'">Register Now!</button> -->
 
         
