--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
                     </div>
                     <div class="swiper-slide" style="background-image: url('/assets/slide17.jpg')">
                     </div>
+                    <div class="swiper-slide" style="background-image: url('/assets/slide18.jpg')">
+                    </div>
                 </div>
                 <!-- If we need pagination -->
                 <div class="swiper-pagination"></div>
