--- a/register.html
+++ b/register.html
@@ -59,7 +59,7 @@
         <!-- <h2 style="color: orange;">Check your email on how to register for the event!</h2> -->
         <p class="font-md info">Registrations close on 7th August, 2024 at 9:30 p.m., so please ensure you register as soon as possible!</p>
 
-        <h1 style="color:red;"> ⚠️ ONLY FOR IB CAMPUS </h1>
+        <h1 style="color:red;">⚠️ THESE LINKS ARE ONLY FOR IB CAMPUS</h1>
 
         <h2 style="color: yellow;">Junior Category Registration link (Grades 6 - 8)</h2>
         <button class="btn-purple" onclick="window.location.href='https://paytm.me/ILSO-fa'">Register →</button>
