--- a/rules.html
+++ b/rules.html
@@ -66,23 +66,23 @@
 <!--     <div class="themes-content">
         <h2>Themes for 2024</h2>
         <div class="theme-box">
-            <h3>Theme 1: Sustainable Technology</h3>
+            <h3>Theme 1: Sustainabilty</h3>
             <p>Innovate for a greener future by developing solutions that minimize environmental impact and promote resource efficiency.</p>
         </div>
         <div class="theme-box">
-            <h3>Theme 2: Healthcare Innovation</h3>
+            <h3>Theme 2: Healthcare</h3>
             <p>Develop solutions that advance medical research, promote accessibility, and ensure better health outcomes for all.</p>
         </div>
         <div class="theme-box">
-            <h3>Theme 3: Fintech</h3>
+            <h3>Theme 3: Finance</h3>
             <p>Transform the financial landscape with innovative technologies that enhance financial services, improve accessibility, and promote financial literacy.</p>
         </div>
         <div class="theme-box">
-            <h3>Theme 4: Learning Innovation</h3>
+            <h3>Theme 4: Education</h3>
             <p>Revolutionize education by developing technologies that enhance learning experiences, increase accessibility, and personalize education.</p>
         </div>
         <div class="theme-box">
-            <h3>Theme 5: Transit Technology</h3>
+            <h3>Theme 5: Transport</h3>
             <p>Innovate transportation by creating technologies that enhance mobility, improve efficiency, and reduce environmental impact.</p>
         </div>
     </div> -->
