--- a/rules.html
+++ b/rules.html
@@ -60,10 +60,10 @@
         </div>
     </section>
 
-    <h2 style="color: orange; text-align: center; padding: 12px 0;">Themes will be released on the day of the event. Check back later!</h2>
+<!--     <h2 style="color: orange; text-align: center; padding: 12px 0;">Themes will be released on the day of the event. Check back later!</h2> -->
 
     <!-- Themes Section -->
-<!--     <div class="themes-content">
+    <div class="themes-content">
         <h2>Themes for 2024</h2>
         <div class="theme-box">
             <h3>Theme 1: Sustainabilty</h3>
@@ -85,7 +85,7 @@
             <h3>Theme 5: Transport</h3>
             <p>Innovate transportation by creating technologies that enhance mobility, improve efficiency, and reduce environmental impact.</p>
         </div>
-    </div> -->
+    </div>
 
     <!-- Fontawesome (CDN libraries - Content Delivery Network) -->
     <script src="https://kit.fontawesome.com/87ac74576e.js" crossorigin="anonymous"></script>
