--- a/register.html
+++ b/register.html
@@ -73,7 +73,7 @@
         <!-- Rules Section -->
         <div class="rules-section">
             <h3>Criterion Document</h3>
-                <a href="./assets/rulesDoc.pdf" style="background-color: #6a0dad; /* Purple background */ border: none; /* Remove borders */ color: white; /* White text */ padding: 15px 32px; /* Some padding */ text-align: center; /* Centered text */ text-decoration: none; /* Remove underline */ display: inline-block; /* Make the link look like a button */ font-size: 16px; /* Button text size */ margin: 0; /* Remove default margin */ cursor: pointer; /* Mouse pointer on hover */ border-radius: 8px; /* Rounded corners */ transition: background-color 0.3s; /* Smooth transition for hover effect */"> Go to Rules Document </a>
+                <a href="./assets/rulesDoc.pdf" style="background-color: #6a0dad; /* Purple background */ border: none; /* Remove borders */ color: white; /* White text */ padding: 15px 32px; /* Some padding */ text-align: center; /* Centered text */ text-decoration: none; /* Remove underline */ display: inline-block; /* Make the link look like a button */ font-size: 16px; /* Button text size */ margin: 0; /* Remove default margin */ cursor: pointer; /* Mouse pointer on hover */ border-radius: 8px; /* Rounded corners */ transition: background-color 0.3s; /* Smooth transition for hover effect */ padding-bottom: 12px;"> Go to Rules Document </a>
             <br>
             <h3>Rules</h3>
             <div class="rule">
