--- a/schedule.html
+++ b/schedule.html
@@ -35,6 +35,9 @@
                     <li>
                         <a href="./register.html">Registrations</a>
                     </li>
+                    <li>
+                        <a href="./upload.html">Submissions</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#">
                             <span>More</span>
